# opengl

./: CMakeLists.txt  README.md  build_and_run.sh
assets/shaders/: basic_frag.glsl  basic_vert.glsl
libraries/include/: stb_image.h
libraries/include/glad/: glad.h
src/: EBO.cpp  EBO.h  InputHandler.cpp  InputHandler.h  VAO.cpp  VAO.h  VAP.cpp  VAP.h  VBO.cpp  VBO.h  camera.cpp  camera.h  common.h  glad.c  main.cpp  shader.cpp  shader.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h  window.cpp  window.h
